Implementation de la seconde application et d'une interface JavaFX